test/errors/unrestr2.asp
#maxint=20.
p(f(VAR_0)):-X_G<2,Y_G<10,#count{Q_G_L0:Q_G_L0<W_G,q(W_G),T_G<2,q(VAR_3),q(VAR_4),nat(Q_G_L0),VAR_3=T_G+3,VAR_4=Q_G_L0*5,s(VAR_4),s(VAR_3),s(W_G)}>1,p(VAR_1),p(VAR_2),nat(T_G),nat(Y_G),nat(X_G),VAR_0=X_G+1,VAR_1=Y_G-1,VAR_2=X_G-1,s(f(VAR_0)),s(VAR_1),s(VAR_2).
nat(19).
nat(17).
nat(18).
nat(15).
nat(16).
nat(13).
nat(14).
nat(11).
nat(12).
nat(3).
nat(20).
nat(2).
nat(1).
nat(10).
nat(0).
nat(7).
nat(6).
nat(5).
nat(4).
nat(9).
nat(8).
s(6).
s(f(5)).
